# axon

./: .gitignore  AGENTS.md  TODO.md  build.ax  justfile  opencode.json
src/: Cargo.toml  clap.rs  main.ax  sidecar.rs  tracing.rs
src/axon_native_build_bin/: main.rs
src/compiler/: entry.ax  entry.test.ax  ownership.ax  ownership.rs  self_host_scan_rust.rs
src/compiler/backend/: artifacts.ax  backend.rs  bootstrap.ax  driver.ax  ffi.ax  foreign_archive.rs  link.ax  native_codegen.rs  native_codegen_bundle.inc.rs  policy.ax  toolchain.rs
src/compiler/bootstrap/: protocol.ax  rust_bridge.ax
src/compiler/complex_types/: array.ax  string.ax
src/compiler/diagnostics/: diagnostic.ax  diagnostic.test.ax  diagnostics.rs
src/compiler/ir/: ir.ax  ir.rs  ir.test.ax  lower.ax  lower_project.ax  lower_project.test.ax
src/compiler/pipeline_check/: determinism.test.ax  pipeline_check.ax  test_fmt.rs  test_orchestrate.ax
src/compiler/proj/: build_file.ax  build_file.test.ax  command_targets.ax  command_targets.test.ax  discover.ax  discover.rs  loading.test.ax  module_graph.ax  targets.ax  targets.rs  targets.test.ax
src/compiler/semantics/: check.ax  check.test.ax  lint.ax  lint.test.ax  ownership.ax  ownership.rs  ownership.test.ax  ownership_project.ax  ownership_project.test.ax  ownership_summary.ax  ownership_summary.test.ax  project_parity.test.ax  resolve.ax  semantics.ax  semantics.rs  type_sigils.test.ax  typecheck.ax  typecheck.test.ax  types.ax  types.test.ax
src/compiler/syntax/: ast.ax  ast.test.ax  lexer.ax  lexer.rs  lexer.test.ax  parser.ax  parser.rs  parser.test.ax  token.ax
src/compiler/types/composites/: enum.ax  (+5 more)
src/mcp/: mcp.rs  resources.ax  server.ax  tools.ax
(+57 files in other folders)
